--- a/misc/references.bib
+++ b/misc/references.bib
@@ -9,6 +9,15 @@
   URL = {https://hal.inria.fr/inria-00072431/}
 }
 
+@inproceedings{schack2008celf,
+  title={Celf--A logical framework for deductive and concurrent systems (System description)},
+  author={Schack-Nielsen, Anders et Sch{\"u}rmann, Carsten},
+  booktitle={International Joint Conference on Automated Reasoning},
+  pages={320--326},
+  year={2008},
+  organization={Springer}
+}
+
 @article{IOSchedulers,
   author = {Colin Ian King},
   title = {IOSchedulers},
@@ -17,6 +26,7 @@
   month = {Septembre},
   URL = {https://wiki.ubuntu.com/Kernel/Reference/IOSchedulers}
 }
+
 @article{Kyber,
   author = {Jonathan Corbet},
   title = {Two new block I/O schedulers for 4.12},
