--- a/sections/phaistos.tex
+++ b/sections/phaistos.tex
@@ -9,13 +9,15 @@ et la validation de politiques d'E/S écrite par un utilisateur. Il est le
 fruit issu du projet VeriAMOS ayant pour but de s'attaquer au problème de vérification d'une classe de services de systèmes d'exploitation.
 
 \subsection{Pourquoi PhaistOS ?}
+\label{why_phaistos}
 
 Il faut tout d'abord expliquer pourquoi VeriAMOS à lieu d'être. En effet ce 
 projet à pour but d'améliorer la vérification de systèmes d'exploitation, qui 
 reste aujourd'hui compliqué pour deux raisons principales. Premièrement, les 
 propriétés mathématiques des algorithmes sous-jacents sont généralement 
 difficiles à exprimer, deuxièmement, la structure du code qui implémente ces 
-algorithmes dans le SE est en général très complexe. 
+algorithmes dans le SE est en général très complexe, comme par exemple avec 
+Linux, écrit en C. 
 
 Afin d'éviter de se retrouver dans cette situation d'un niveau de difficulté 
 trop élevé pour effectuer une vérification efficace, VeriAMOS propose 
@@ -79,8 +81,8 @@ PhaistOS dans le système et pour finir le code source de PhaistOS des
 différents dépôts de système de versions Git hébergés sur la plateforme \href
 {https://gitlab.inria.fr/}{Gitlab}.
 
-Plus tard, j'ai du utiliser un réseau de serveurs externes français et dédié à 
-la recherche appelé Grid'5000 pour effectuer des tests sur des machines plus 
+Plus tard, j'ai du utiliser un réseau de serveurs français et dédié à la 
+recherche appelé Grid'5000 pour effectuer des tests sur des machines plus 
 performantes que ma machine personnelle. Pour cela j'ai du respecter une charte 
 d'utilisation et apprendre les commandes propres à l'utilisation de la 
 plateforme. À ce niveau là du stage, une connaissance fondamentale des systèmes 
