--- a/report.tex
+++ b/report.tex
@@ -20,6 +20,87 @@
 \newcommand*{\currentname}{\@currentlabelname}
 \makeatother
 
+\usepackage{xcolor}
+\usepackage{listings}
+\lstset{frame=lines,
+  escapeinside={(*}{*)},
+  numbers=left,
+  basicstyle={\footnotesize\ttfamily},
+  keywordstyle={\color{purple}},
+}
+\lstdefinelanguage{Phaistos}{
+   morekeywords=[1]{list, int, void, bool, bool, request, req},
+   morekeywords=[2]{const, order, if, else, while, do, until, On, return},
+   morekeywords=[3]{POLICY, HELPERS, EVENTS,INIT, HAS_WORK,DISPATCH, READ, WRITE, HZ, INSERT, REMOVE, EXIT, MERGE},
+   morekeywords=[4]{init,is_empty,is_empty_careful,append,remove,move_to,next_request},
+   keywordstyle=[1]{\color{green}},
+   keywordstyle=[2]{\color{blue}},
+   keywordstyle=[3]{\color{purple}},
+   keywordstyle=[4]{\color{orange}},
+   comment=[l]{//},
+   morecomment=[s]{/*}{*/},
+   commentstyle={\color{blue!60!black}\itshape},
+  numbersep=1em,xleftmargin=2em,
+   sensitive=true
+}
+\lstdefinelanguage{Phaistos-Template}{
+    alsoletter = {!},
+    morekeywords=[1]{list, int, void, bool, string, request, req, option},
+    morekeywords=[2]{const, order, if, then, else, while, do, until, On, return},
+    morekeywords=[3]{match, with, None, Some, ignore, self, my,
+      String, let, List, string_of_int,map,in},
+    morekeywords=[4]{use,forEach_at,forEach,pushNamedScope,callEach,typeAssert,popScope},
+    morekeywords=[5]{let!},
+    keywordstyle=[1]{\color{green}},
+    keywordstyle=[2]{\color{blue}},
+    keywordstyle=[3]{\color{purple}},
+    keywordstyle=[4]{\color{orange}},
+    keywordstyle=[5]{\color{magenta}},
+    comment=[l]{//},
+    morecomment=[s]{/*}{*/},
+    commentstyle={\color{blue!60!black}\itshape},
+  numbersep=1em,xleftmargin=2em,
+    sensitive=true,
+    literate= 
+    *{[\$}{{{\bf\color{cyan}[\$}}}2
+    {\$]}{{{\bf\color{cyan}\$]}}}2
+    {["}{{{\bf\color{cyan}["}}}2
+    {"]}{{{\bf\color{cyan}"]}}}2
+    {[\{}{{{\bf\color{cyan}[\{}}}2
+    {\}]}{{{\bf\color{cyan}\}]}}}2
+}
+\lstdefinelanguage{Phaistos-AST}{
+    morekeywords=[1]{list,string,option},
+    morekeywords=[2]{topLevel, funcDefinition, eventAction, event, script, helpers, actions, eventDeclaration},
+    keywordstyle=[1]{\color{green}},
+    keywordstyle=[2]{\color{blue}},
+    comment=[l]{//},
+    morecomment=[s]{/*}{*/},
+    commentstyle={\color{blue!60!black}\itshape},
+  numbersep=1em,xleftmargin=2em,
+    sensitive=true
+}
+\lstdefinelanguage{Makefile}{
+    morekeywords=[1]{MAKE, CURDIR},
+    morekeywords=[2]{-s, -C},
+    keywordstyle=[1]{\color{green}},
+    keywordstyle=[2]{\color{blue}},
+    comment=[l]{\#},
+    commentstyle={\color{blue!60!black}\itshape},
+    sensitive=true,
+  numbersep=1em,xleftmargin=2em,
+    literate= *{\$}{{{\color{orange}\$}}}1
+}
+\lstdefinelanguage{Dune}{
+    morekeywords=[1]{executable, preprocess, name, libraries},
+    morekeywords=[2]{flags, action, run},
+    keywordstyle=[1]{\color{green}},
+    keywordstyle=[2]{\color{blue}},
+    sensitive=true,
+  numbersep=1em,xleftmargin=2em,
+    literate= *{\%}{{{\color{orange}\%}}}1
+}
+
 % Pour toutes caractéristiques du texte dans le rapport
 \singlespacing
 \geometry{
