--- a/misc/references.bib
+++ b/misc/references.bib
@@ -2,8 +2,10 @@
 
 @inproceedings{Barreto-Muller:asf2002,
   author = {Luciano Porto Barreto et Gilles Muller},
-  title = {Bossa: une approche langage à la conception d'ordonnanceurs de processus},
-  booktitle = {Journées francophones des jeunes chercheurs en systèmes d'exploitation (ASF'2002)},
+  title = {Bossa: une approche langage à la conception d'ordonnanceurs de 
+  processus},
+  booktitle = {Journées francophones des jeunes chercheurs en systèmes 
+  d'exploitation (ASF'2002)},
   year = {2002},
   month = {Avril},
   URL = {https://hal.inria.fr/inria-00072431/}
@@ -34,4 +36,16 @@
   year = {2017},
   month = {Avril},
   URL = {https://lwn.net/Articles/720675/}
+}
+
+@inproceedings{lepers2020provable,
+  title={Provable multicore schedulers with Ipanema: application to work 
+  conservation},
+  author={Lepers Baptiste et Gouicem Redha et Carver Damien et Lozi Jean-Pierre 
+  et Palix Nicolas et Aponte Maria-Virginia et Zwaenepoel Willy et Sopena 
+  Julien et Lawall Julia et Muller Gilles},
+  booktitle={Proceedings of the Fifteenth European Conference on Computer 
+  Systems},
+  pages={1--16},
+  year={2020}
 }
