--- a/sections/phaistos.tex
+++ b/sections/phaistos.tex
@@ -81,9 +81,9 @@ PhaistOS dans le système et pour finir le code source de PhaistOS des
 différents dépôts de système de versions Git hébergés sur la plateforme \href
 {https://gitlab.inria.fr/}{Gitlab}.
 
-Plus tard, j'ai du utiliser un réseau de serveurs français et dédié à la 
-recherche appelé Grid'5000 pour effectuer des tests sur des machines plus 
-performantes que ma machine personnelle. Pour cela j'ai du respecter une charte 
+Plus tard, j'ai du utiliser un réseau de serveurs français dédié à la recherche 
+appelé Grid'5000 pour effectuer des tests sur des machines plus performantes 
+que ma machine personnelle. Pour cela j'ai du respecter une charte 
 d'utilisation et apprendre les commandes propres à l'utilisation de la 
 plateforme. À ce niveau là du stage, une connaissance fondamentale des systèmes 
 d'exploitation était nécessaire pour chaque installation sur les machines 
